<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_login_form">

        <ImageView

            android:id="@+id/login_image"
            android:layout_width="261dp"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/user"
            android:visibility="visible" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            app:backgroundTint="#03A9F4" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/or_text">

        </TextView>

        <Button
            android:id="@+id/create_account_button_login"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"

            android:layout_height="wrap_content"
            android:text="@string/Create_text"
            app:backgroundTint="#03A9F4" />

    </LinearLayout>

</LinearLayout>